# python-project-50

./: .coverage  .gitignore  Makefile  README.md  cli.py  coverage.xml  key_new  key_new.pub  pyproject.toml
.github/workflows/: code_climate_check.yml  pyci.yml
gendiff/: __init__.py  cli.py  constants.py  generate_diff.py  parser.py  tree.py
gendiff/formatters/: __init__.py  json.py  plain.py  stylish.py
gendiff/scripts/: Makefile  gendiff.py
tests/: test_gendiff.py  test_generate_diff.py
tests/fixtures/: json_result.json  json_result2.json  short_tree1.json  short_tree2.json
