[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["CvilevAS"]
repository = "https://github.com/minoko86/python-project-50"
readme = "README.md"
packages = [{include = "gendiff"}]

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pytest = "^7.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.report]
show_missing = true

[tool.coverage.xml]
output = "coverage.xml"